2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add check for whether gcc accepts
	-Wimplict-fallthrough.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* configure.ac: Add memrchr, rawmemchr and powerof2 checks.

2016-08-04  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.167.
	* NEWS: Add 0.167 section.

2016-07-06  Mark Wielaard  <mjw@redhat.com>

	* .gitignore: Remove src/ld. ldlex.c, ldscript.c and ldscript.h.
	* configure.ac (enable generic): Removed.

2016-06-28  Richard Henderson <rth@redhat.com>

	* configure.ac (HAVE_LINUX_BPF_H): New test and conditional.

2016-06-10  Mark Wielaard  <mjw@redhat.com>

	* CONTRIBUTING: Extend patch, committer and maintainer guidelines.

2016-05-02  Filipe Brandenburger  <filbranden@google.com>

	* configure.ac (argp check): Pass pass &argv.
	* configure.ac (-W<...> checks): Pass -Werror to the warning checks,
	to ensure unsupported warning options are noticed during ./configure
	time and not only later during build.

2016-03-31  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.166.

2016-03-02  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set program_prefix to eu- by default.
	* NEWS (0.166): New sections, document --program-prefix default.

2016-02-13  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add check for whether gcc accepts -Wnull-dereference.

2016-02-08  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add checks for sane -Wlogical-op and whether gcc
	accepts -Wduplicated-cond.

2016-01-08  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.165.
	* NEWS: Add 0.164 section.

2016-01-04  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add BZ2_LIBS and LIBLZMA substitutions.
	Add config/libelf.pc and config/libdw.pc config files.

2015-12-31  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (AM_MAKEFLAGS): Set --no-print-directory.

2015-10-16  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Make zlib mandatory.
