@@ -1,3 +1,8 @@
+2016-11-23  Mark Wielaard  <mjw@redhat.com>
+
+	* configure.ac: Add test for bad fts.h. Add -DBAD_FTS=1 to CFLAGS
+	if necessary.
+
 2016-11-02  Mark Wielaard  <mjw@redhat.com>
 
 	* configure.ac: Add check for whether gcc accepts
